<resources>
    <string name="app_name">Higher Or Lower</string>
    <string name="result_low">Lower</string>
    <string name="next_card">Next Card</string>
    <string name="result_high1">Higher</string>
    <string name="result_same">Same Card</string>
    <string name="result_ace">ACE</string>
    <string name="low">   Lower</string>
    <string name="play_again">Play Again</string>
    <string name="new_game">New Game</string>
    <string name="settings">Settings</string>
    <string name="tutorial">Tutorial</string>
    <string name="exit_game">Exit</string>
    <string name="higher_or_lower">Higher Or Lower</string>
    <string name="higher">Higher</string>
    <string name="enter">Enter</string>
    <string name="game_over">Game</string>
    <string name="game_over1">Over</string>
    <string name="how_to_play">How To Play</string>
    <string name="new_deck">New Deck</string>
</resources>
