<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/inside_screen_backgrounds"
    tools:context="abhi.higherorlower.StartActivity">


    <ImageView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/game_name_3"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="40dp"
    android:orientation="vertical"
    android:paddingRight="40dp"
    android:paddingTop="100dp">

    <Button
        android:id="@+id/new_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_game"
        android:textColor="#ffffff"
        android:padding="10dp"
        android:background="@drawable/button_with_curves_transparent"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="25dp"

         />


    <Button
        android:id="@+id/tutorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tutorial"
        android:textColor="#ffffff"
        android:background="@drawable/button_with_curves_transparent"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="10dp"
        android:layout_marginBottom="25dp"

        />

    <Button
        android:id="@+id/exit_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit_game"
        android:textColor="#ffffff"
        android:background="@drawable/button_with_curves_transparent"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="25dp"
        android:padding="10dp"

        />
</LinearLayout>

</LinearLayout>
