<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_game_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/inside_screen_backgrounds"
    tools:context="abhi.higherorlower.GameMainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="#80B22222"
        >

        <LinearLayout
            android:id="@+id/main_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/main_toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:textSize="20sp"/>

        </LinearLayout>

    </android.support.v7.widget.Toolbar>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        android:paddingStart="10dp"
        android:paddingBottom="70dp"


        >

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:background="@drawable/grey_curved_button">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Score: "
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:layout_gravity="start"

            />
        <TextView
            android:id="@+id/tvscore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:text="0"
            android:maxLines="1"
            android:layout_gravity="start"
            />

        </LinearLayout>

<LinearLayout
    android:layout_width="180dp"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:layout_marginStart="40dp"
    android:background="@drawable/grey_curved_button">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="High Score: "
            android:textColor="#ffffff"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/highest_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:maxLines="1"
            android:text="0"
            android:textSize="20sp"
            />

</LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="302dp"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        >


 <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical">


        <ImageButton
            android:id="@+id/highButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/up_arrow"
            android:background="@drawable/round_button_high"
        />

     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/higher"
         android:textSize="15sp"
         android:padding="5dp"
        />

 </LinearLayout>

        <ImageView
            android:id="@+id/playingCard"
            android:layout_width="180dp"
            android:layout_height="250dp"
            android:src="@drawable/d27"
            android:layout_margin="5dp"


            />

  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_gravity="bottom"
      >


        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/low"
            android:id="@+id/lowButton"
            android:src="@drawable/down_arrow"
            android:layout_gravity="bottom"
            android:background="@drawable/round_button_low"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low"
            android:textSize="15sp"
            android:layout_gravity="bottom"
            android:padding="5dp"
            />

</LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="50dp"
        android:paddingStart="80dp"
        >

        <Button
            android:id="@+id/result"
            android:background="@drawable/button_with_curves_transparent"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="25sp"
            android:gravity="center"
            android:text="@string/next_card"
            android:padding="10dp"



            />
    </LinearLayout>
</LinearLayout>
</LinearLayout>
